feat: sendMail not working
